release 1.0.3 (2009-03/04)
- The project version and build number are now correctly included in the
  jersey-bundle.jar and thus those values now appear correctly in generated
  WADL documents.
- Fixed issue 219
  https://jersey.dev.java.net/issues/show_bug.cgi?id=219
  Refactored com.sun.jersey.spi.container.servlet.ServletContainer to
  inherit from HttpServlet.
- Fixed issue 217
  https://jersey.dev.java.net/issues/show_bug.cgi?id=217
  SpringServlet was failing when used as a filter.
- Fixed issue 209
  https://jersey.dev.java.net/issues/show_bug.cgi?id=209
  UriBuilder.buildFromEncoded(Object...) throws IllegalArgumentException if a
  template does not have an associated value declared in the object array.
- Fixed issue 216
  https://jersey.dev.java.net/issues/show_bug.cgi?id=216
  If a URI template contains two or more declarations of a template variable
  then encoded value for the template variable is used for all declarations.
  Previously the encoded value was only used for the first declaration and
  the non-encoded value for subsequent declarations.
  Previously the
- Fixed issue 208
  https://jersey.dev.java.net/issues/show_bug.cgi?id=208
  When ServletContainer is used as a servlet filter the initialization
  property "com.sun.jersey.config.property.WebPageContentRegex" can be used
  to declare a regular expression. If that expression matches the servlet path
  then the request is forwarded to the next filter in the filter chain otherwise
  the ServletContainer processes the request.
  See:
    com.sun.jersey.spi.container.servlet.ServletContainer#PROPERTY_WEB_PAGE_CONTENT_REGEX
  The bookstore sample has been modified to use this feature.
- Fixed problems with constructor injection for InjectableProvider providers.
  Application-defined injectable providers may now use the constructor for injection
  system-defined providers.
- Fixed issue where field injection occurs after a @PostConstruct method
  is invoked.