@@ -594,6 +594,8 @@ public class AsyncWebResource extends Filterable implements
 
                 if (r.getStatus() >= 300) 
                     throw new UniformInterfaceException(r);
+
+                r.close();
                 return null;
             }
         });
